* Fixed :boolean inputs to disable the included hidden input when disabling the actual checkbox
* Fixed that Formtastic was making changes to the options hash directly instead of on a duplicate, causing problems for those trying to reuse options on multiple inputs in the view 
* Fixed that tiny scroll bars were appearing on legends in date/time/radio/cbheckboxes fielsets (GH-477)    

1.2.3

* Changed i18n gem dependency from ">= 0.4.0" to "~> 0.4" to work with apps that require i18n 0.5
* Fixed documentation typos

1.2.3.beta

* Removed deprecated methods input_field_set, button_field_set, boolean_select_input, boolean_radio_input and boolean_radio_input
* Removed deprecated :class option on commit_button (use :input_html instead)
* Fixed that stylesheets and initializers directories would be removed on uninstalling
* Fixed some documentation and formatting
* Fixed test coverage issues under Ruby 192 and Rails 2
* Fixed that input_html options were not being passed down to checkbox tags
* Changed internal duplication of the options hash so that the same options hash can be re-used over multiple inputs without being altered
* Changed internal configuration to use class_attribute when available (Rails 3) to avoid deprecation warnings
* Added Rails 3 compatible form generator templates in addition to existing Rails 2 support
* Added reflection on allow_blank option when determining the 'required' status of an input

850bf1d .dup options hash before we fiddle with it so that the same hash can be re-used in views between inputs (GH-474)
2d69c23 Merge branch 'class_attribute_fix' into 1.2-stable
1b12feb Stylistic change to remove self. prefix on method calls
0a8fe2d Use class_attribute configuration instance methods
58a91b5 use class_attribute as the priority over class_inheritable_accesssor
88c5552 adding a note/warning about subclassing in the initializer template
8bfc66b CHANGELOG catch-up
3fb94d1 use class_attribute instead of class_inheritable_accessor if defined