@@ -27,7 +27,7 @@ describe 'boolean input' do
     output_buffer.should have_tag('form li input[@type="hidden"]', :count => 1)
     output_buffer.should_not have_tag('form li label input[@type="hidden"]', :count => 1) # invalid HTML5
   end
-
+  
   it 'should generate a checkbox input' do
     output_buffer.concat(@form) if Formtastic::Util.rails3?
     output_buffer.should have_tag('form li label input')
@@ -51,6 +51,16 @@ describe 'boolean input' do
 
     output_buffer.concat(form) if Formtastic::Util.rails3?
     output_buffer.should have_tag('form li label input[@checked="checked"]')
+  end
+  
+  it 'should name the hidden input with the :name html_option' do
+    form = semantic_form_for(@new_post) do |builder|
+      concat(builder.input(:answer_comments, :as => :boolean, :input_html => { :name => "foo" }))
+    end
+    
+    output_buffer.concat(form) if Formtastic::Util.rails3?
+    output_buffer.should have_tag('form li input[@type="checkbox"][@name="foo"]', :count => 1)
+    output_buffer.should have_tag('form li input[@type="hidden"][@name="foo"]', :count => 1)
   end
   
   it "should generate a disabled input if :input_html is passed :disabled => 'disabled' " do
