@@ -5,6 +5,8 @@
 * Fixed :boolean inputs to disable the included hidden input when disabling the actual checkbox
 * Fixed that Formtastic was making changes to the options hash directly instead of on a duplicate, causing problems for those trying to reuse options on multiple inputs in the view 
 * Fixed that tiny scroll bars were appearing on legends in date/time/radio/cbheckboxes fielsets (GH-477)    
+* Fixed an issue when formtastic fails to determine if a checkbox is checked with custom checked and unchecked values (thanks to Eugene Bolshakov)
+* Fixed that the hidden input rendered with a boolean checkbox did nt use the custom :name from :input_html options hash
 
 1.2.3
 
